fixed some spacing and sizing

--- a/css/editors-note.css
+++ b/css/editors-note.css
@@ -9,9 +9,17 @@
     text-align: justify;
 }
 
+.note p{
+    font-size: 1.2rem;
+}
+
 @media only screen and (max-width: 991px){
     .note{
         max-width: 70%;
+    }
+
+    .note p{
+        font-size: 1.1rem;
     }
 }
 
@@ -19,10 +27,18 @@
     .note{
         max-width: 80%;
     }
+
+    .note p{
+        font-size: 0.9rem;
+    }
 }
 
 @media only screen and (max-width: 575px){
     .note{
         max-width: 90%;
+    }
+
+    .note p{
+        font-size: 0.8rem;
     }
 }
